--- a/FullControl.csproj
+++ b/FullControl.csproj
@@ -11,6 +11,8 @@
   <ItemGroup>
     <None Remove="JsonDefinitions\outraPagina.json" />
     <None Remove="JsonDefinitions\test.json" />
+    <None Remove="Themes\DefaultTheme.json" />
+    <None Remove="Themes\RedTheme.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +20,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="JsonDefinitions\test.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Themes\DefaultTheme.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Themes\RedTheme.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
